test/typeerrors/Strategies/TypeError.type

      x :: a ;
  -------------------------
    x +++ True :: Bool;;
     
a == Int : "linkerkant moet een Int zijn";
